fixed project 2 not fitting on smaller screen

--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -16,7 +16,6 @@
   border-left: none;
   border-top: none;
   padding-right: 5px;
-  
 }
 /*About me title text*/
 .about-title {
@@ -42,7 +41,7 @@
   margin-right: 50px;
 }
 .mips-info,
-.cSharp-info,
+.cPlus-info,
 .c-info,
 .python-info {
   display: flex;
@@ -51,17 +50,16 @@
   margin-bottom: 5px;
 }
 .mips-img,
-.cSharp-img,
+.cPlus-img,
 .c-img,
 .python-img {
   width: 100px;
   transition: 0.6s;
   transform-style: preserve-3d;
   border-radius: 50px;
-
 }
 .mips-img:hover,
-.cSharp-img:hover,
+.cPlus-img:hover,
 .c-img:hover,
 .python-img:hover {
   box-shadow: 3px 3px 7px rgb(143, 142, 142);
@@ -74,4 +72,31 @@
   margin-left: 10px;
   max-width: 150px;
   word-wrap: break-word;
+}
+
+.projects-header {
+  overflow: hidden;
+  border-right: 0.1em solid black;
+  white-space: nonwrap;
+  animation: typing 3.5s steps(10, end), blink 0.5s step-end infinite;
+  margin: 0 auto;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 28%;
+  }
+}
+
+@keyframes blink {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
+  }
 }
