--- a/css/flipcards.css
+++ b/css/flipcards.css
@@ -27,7 +27,9 @@
 .project1-cards,
 .project2-cards {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
 }
 .front,
 .front2,
