--- a/css/projects.css
+++ b/css/projects.css
@@ -5,7 +5,7 @@
   background-color: rgb(115,134,120);
   font-family:  Playfair Display;
   margin-left: 20px;
-  padding: 15px;
+  padding: 10px;
   border-radius: 15px;
   color: rgb(249, 228, 188);
 }
